--- a/Lessons/lesson_15/index.html
+++ b/Lessons/lesson_15/index.html
@@ -22,7 +22,7 @@
 		    
 		    </div>
 
-            <figure class="photo html">
+            <figure class="photo jq">
 		    <img  src="img/jquery_logo.png" alt="">
 		    
 		    </figure>
