--- a/Lessons/lesson_16/index.html
+++ b/Lessons/lesson_16/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Less16</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link  href="css/fotorama.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="text">
     <h2>Личный фото архив.</h2>
-
+    </div>
     <div class="fotorama header" data-nav="thumbs" data-width="100%" data-allowfullscreen="native" data-autoplay="4000">
     <a href="MG_5144.jpg"><img src="img/MG_5144.jpg"  width="864" height="654"></a>
     <a href="svetlpo.jpg"><img src="img/svetlpo.jpg" width="864" height="654"></a>
@@ -18,17 +19,7 @@
     <a href="MG_5025.jpg"><img src="img/MG_5025.jpg" width="864" height="654"></a>
     <a href="smook.jpg"><img src="img/smook.jpg" width="864" height="654"></a>
     </div>
-
-
-
-
-
-
-
-
-	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="js/fotorama.js"></script>
 </body>
 </html>
