--- a/Lessons/lesson_19/index.html
+++ b/Lessons/lesson_19/index.html
@@ -25,7 +25,7 @@
    <div class="tab-content contain wow rollIn">
 
          <div role="tabpanel" class="tab-pane active  id="home">
-               <form action="#" name="user-form" class="for1 pulse wow " data-wow-delay="0.9s"">
+               <form action="#" name="user-form" class="for1 slideInRight wow " data-wow-delay="0.2s"">
                   <input class="in-form" type="text" value="Username"> 
                   <input class="in-form in-form2" type="password" value="password">
                   <p>Forgot your password?</p>
