--- a/Lessons/lesson_19/index.html
+++ b/Lessons/lesson_19/index.html
@@ -26,8 +26,8 @@
 
          <div role="tabpanel" class="tab-pane active  id="home">
                <form action="#" name="user-form" class="for1 flash wow " data-wow-delay="0.3s"">
-                  <input class="in-form" type="text" value="Username"> 
-                  <input class="in-form in-form2" type="password" value="password">
+                  <input class="in-form flipInX wow" type="text" value="Username" data-wow-delay="1.4s"> 
+                  <input class="in-form in-form2 flipInX wow" type="password" value="password" data-wow-delay="1.7s">
                   <p>Forgot your password?</p>
                <label class="check-form"> <input type="checkbox">  Remember me</label>
          </form>
