--- a/Lessons/lesson_22/index.html
+++ b/Lessons/lesson_22/index.html
@@ -50,7 +50,7 @@
   <script type="text/javascript">
 ymaps.ready(function () {
     var myMap = new ymaps.Map('map', {
-        center: [55.862347, 37.432478],
+        center: [55.863228, 37.425435],
         zoom: 16,
         // Обратите внимание, что в API 2.1 по умолчанию карта создается с элементами управления.
         // Если вам не нужно их добавлять на карту, в ее параметрах передайте пустой массив в поле controls.
@@ -58,7 +58,7 @@ ymaps.ready(function () {
 
     });
 
-    var myPlacemark = new ymaps.Placemark(myMap.getCenter(), {
+    var myPlacemark = new ymaps.Placemark([55.862347, 37.432478], {
         balloonContentBody: [
             '<address>',
             '<strong>Офис  Виллиса Лациса</strong>',
